[Change Request] Go to top button on Talent pages / Talent resume photos clickable (will open Photos Modal) / Fixed 'View Photos' label disappearing on small screens / Fixed Manage Worksheet page Manage button responsive on small screens

--- a/resources/scss/pages/_general-use.scss
+++ b/resources/scss/pages/_general-use.scss
@@ -880,3 +880,66 @@
 .gt-ie8 input[type="radio"].px + .lbl:after{
 	background-color: #1d89cf !important;
 }
+
+
+
+#go-to-top-btn {
+
+	// desktop view
+	@media (min-width: 1200px) {
+	    bottom: 20px;
+	    right: 20px;
+	    text-align: left;
+	    background: rgba(0, 0, 0, 0.7);
+	    width: 50px;
+	    height: 50px;
+	    -webkit-border-radius: 35px;
+	    -moz-border-radius: 35px;
+	    border-radius: 35px;
+
+	    &:hover {
+	    	background: rgba(0, 0, 0, 0.9);
+	    }
+
+	    &:hover i {
+	    	color: #fff;
+	   		top: 5px;
+	    }
+
+	    i {
+	    	left: 16px;
+	    }
+
+	}
+
+	// for all views except desktop
+	position: fixed;
+    bottom: 0px;
+    right: 0px;
+    text-align: center;
+    background: rgb(0, 0, 0);
+    background: rgba(0, 0, 0, 0.9);
+    width: 100%;
+    height: 40px;
+    display: none;
+    text-decoration: none;
+    -webkit-transition: all 0.3s linear;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+
+    i {
+    	color: #fff;
+	    margin: 0;
+	    position: relative;
+	    top: 13px;
+	    font-size: 19px;
+	    -webkit-transition: all 0.3s ease;
+	    -moz-transition: all 0.3s ease;
+	    -ms-transition: all 0.3s ease;
+	    -o-transition: all 0.3s ease;
+	    transition: all 0.3s ease;
+    }
+	
+}
